Prevent slider aligning to the left at certain smaller vp widths

--- a/stylesheets/_component.slider.scss
+++ b/stylesheets/_component.slider.scss
@@ -9,10 +9,11 @@
 }
 
 .slider {
-    display: inline-block;
+    display: block;
     position: relative;
 
     @include respond-min($screen-tablet) {
+        display: inline-block;
         width: 600px;
     }
 }
